Checkpoint commit for 0.5.5.9. - Render data by insert order Moved VulkanBufferData creation into dedicated allocator. Tearing seems a bit more prevelent.
In Progress:
0.5.5. If possible optimise further Vulkan Implementation after render data reusability:
0.5.5.9 Render Data by insert order. Prepare synchronized map (camera, texture) -> descriptor, bind descriptor on each object and render evenly on all cores